# VS-AudioTools

./: CMakeLists.txt  LICENSE  README.md
src/: config.hpp  convert.cpp  convert.hpp  crossfade.cpp  crossfade.hpp  delay.cpp  delay.hpp  fade.cpp  fade.hpp  fadein.cpp  fadein.hpp  fadeout.cpp  fadeout.hpp  findpeak.cpp  findpeak.hpp  mix.cpp  mix.hpp  normalize.cpp  normalize.hpp  plugin.cpp  setsamples.cpp  setsamples.hpp  sinetone.cpp  sinetone.hpp
src/common/: offset.cpp  offset.hpp  overflow.cpp  overflow.hpp  peak.cpp  peak.hpp  sampletype.cpp  sampletype.hpp  transition.cpp  transition.hpp
src/utils/: array.hpp  debug.hpp  map.hpp  number.hpp  sample.cpp  sample.hpp  string.cpp  string.hpp  vector.hpp
src/vsmap/: vsmap.cpp  vsmap.hpp  vsmap_common.cpp  vsmap_common.hpp
src/vsutils/: audio.cpp  audio.hpp  bitshift.hpp
